update variaveis do css / add logo e icone

--- a/css/config.css
+++ b/css/config.css
@@ -5,7 +5,7 @@
     --cor_2:#fff;
     --cor_2_sombra:rgba(175, 175, 175, 0.705);
 
-    --font_default:Arial;
+    --font_0:Arial;
     --font_1:Painter;
     --font_2:Ubuntu;
 
