--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 
     margin:0px;
     padding:0px;
-    font-family:var(--font_default);
+    font-family:var(--font_0);
 
 }
 
@@ -30,7 +30,7 @@
 .logo_topo {
 
     justify-content:flex-start;
-    color:#fff;
+    color:var(--cor_2);
     font-family:var(--font_1);
     font-size:35px;
     margin-top:2vh;
@@ -46,6 +46,18 @@
 
 }
 
+.button_topo:hover {
+
+    margin-right:5vw;
+
+}
+
+.button_topo:active {
+
+    margin-right:5.5vw;
+
+}
+
 .button_topo button {
 
     border-style:none;
@@ -57,5 +69,28 @@
     background:var(--cor_2);
     box-shadow:2px 2px 10px 4px var(--cor_2_sombra);
 
+
+}
+
+.button_topo button:hover {
+
+    padding:20px;
+    box-shadow:4px 5px 10px 5px var(--cor_2_sombra);
+
+}
+
+.button_topo button:active {
+
+    padding:13px;
+
+}
+
+.titulo {
+
+    margin-top:8vh;
+    margin-bottom:8vh;
+    color:var(--cor_1);
+    font-size:35px;
+    font-family:var(--font_2);
 
 }
