--- a/css/config.css
+++ b/css/config.css
@@ -1,3 +1,11 @@
+* {
+
+    margin:0px;
+    padding:0px;
+    font-family:var(--font_0);
+
+}
+
 :root {
 
     --cor_1:rgb(2, 128, 231);
@@ -21,4 +29,22 @@
 @font-face {
     font-family:Ubuntu;
     src: url(./fonts/Ubuntu-R.ttf);
+}
+
+.org_site {
+
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+
+}
+
+.titulo {
+
+    margin-top:8vh;
+    margin-bottom:8vh;
+    color:var(--cor_1);
+    font-size:35px;
+    font-family:var(--font_2);
+
 }
