--- a/css/edit_img.css
+++ b/css/edit_img.css
@@ -64,7 +64,7 @@
     flex-wrap:wrap;
     justify-content:center;
     align-items:center;
-    margin:5vh;
+    margin:1vh;
     padding:20px;
     width:80vw;
 
@@ -89,12 +89,29 @@
 
 .moldura img:hover {
 
-    box-shadow:0 0 10px 5px var(--cor_1_sombra);
+    box-shadow:0 0 10px 2px var(--cor_1_sombra);
 
 }
 
 .moldura img:active {
 
     box-shadow:0 0 10px 5px var(--cor_2_sombra);
+
+}
+
+.load {
+
+    display:flex;
+    flex-direction:row;
+    justify-content:center;
+    align-items:center;
+    overflow:hidden;
+    position:fixed;
+    top:0px;
+    width:100%;
+    height:100%;
+    font-size:40px;
+    color:var(--cor_2);
+    background:var(--cor_4);
 
 }
