--- a/admin/css/adm.css
+++ b/admin/css/adm.css
@@ -105,3 +105,34 @@
     color:var(--cor_3);
 
 }
+
+.imagens {
+
+    display:flex;
+    flex-direction:row;
+    flex-wrap:wrap;
+    justify-content:center;
+    word-break:break-all;
+    overflow:hidden;
+    width:90vw;
+
+}
+
+.image {
+
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    width:20vw;
+    padding:10px;
+    margin:1vh;
+    overflow:hidden;
+
+}
+
+.img_edit img {
+
+    width:10vw;
+    overflow:hidden;
+
+}
