--- a/css/config.css
+++ b/css/config.css
@@ -64,3 +64,13 @@
     display:none;
 
 }
+
+@media only screen and (min-width:200px) and (max-width:520px) {
+
+    .titulo {
+
+        font-size:23px;
+
+    }
+
+}
