--- a/css/index.css
+++ b/css/index.css
@@ -23,8 +23,73 @@
 
 .img_edit img {
 
-    max-width:12vw;
-    max-height:12vw;
+    width:12vw;
+    height:12vw;
+
+}
+
+.intro {
+
+    display:flex;
+    flex-direction:row;
+    justify-content:center;
+    align-items:center;
+
+}
+
+.im_intro img {
+
+    width:30vw;
+    height:30vw;
+    margin:4vh;
+
+}
+
+.texto_into {
+
+    display:flex;
+    flex-direction:column;
+    flex-wrap:wrap;
+    justify-content:center;
+    align-items:center;
+    word-wrap:break-all;
+    width:30vw;
+
+}
+
+.n_img {
+
+    align-items:center;
+    text-align:center;
+    margin-top:2vh;
+    width:30vw;
+
+}
+
+.button_intro {
+
+    width:14vw;
+    height:6vh;
+    font-size:18px;
+    border-radius:10px;
+    border-style:none;
+    background:var(--cor_1);
+    color:var(--cor_2);
+    margin-top:2vh;
+    box-shadow:2px 2px 10px 4px var(--cor_1_sombra);
+
+}
+
+.button_intro:hover {
+
+    width:15vw;
+    box-shadow:2px 2px 12px 4px var(--cor_1_sombra);
+
+}
+
+.texto {
+
+    font-size:20px;
 
 }
 
