alter style / add mod / add img / update db

--- a/css/config.css
+++ b/css/config.css
@@ -8,7 +8,7 @@
 
 :root {
 
-    --cor_1:rgb(2, 128, 231);
+    --cor_1:#1f689e;
     --cor_1_sombra:rgba(1, 80, 145, 0.76);
     --cor_2:#fff;
     --cor_2_sombra:rgba(175, 175, 175, 0.705);
