--- a/css/index.css
+++ b/css/index.css
@@ -34,13 +34,14 @@
     flex-direction:row;
     justify-content:center;
     align-items:center;
+    margin-top:10vh;
 
 }
 
 .im_intro img {
 
-    width:30vw;
-    height:30vw;
+    width:40vw;
+    height:40vw;
     margin:4vh;
 
 }
@@ -66,25 +67,29 @@
 
 }
 
+.n_img_t {
+
+    font-size:20px;
+    color:var(--cor_4);
+
+}
+
 .button_intro {
 
-    width:14vw;
-    height:6vh;
+    width:24vw;
+    height:8vh;
     font-size:18px;
     border-radius:10px;
     border-style:none;
     background:var(--cor_1);
     color:var(--cor_2);
     margin-top:2vh;
-    box-shadow:2px 2px 10px 4px var(--cor_1_sombra);
 
 }
 
 .button_intro:hover {
 
-    width:15vw;
-    box-shadow:2px 2px 12px 4px var(--cor_1_sombra);
-
+    width:25vw;
 }
 
 .texto {
